--- a/index.html
+++ b/index.html
@@ -4,44 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vanja's Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      background-color: #f4f4f4;
-    }
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 1rem 0;
-    }
-    h1 {
-      margin: 1rem 0;
-    }
-    section {
-      margin: 2rem;
-      padding: 1rem;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Portfolio</h1>
+    <div class="header-container">
+      <h1>Vanja Åsberg Montgomery</h1>
+      <p>A software engineer passionate about impactful technology solutions</p>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <section>
+  <section id="about">
     <h2>About Me</h2>
-    <p>Hi, I'm Vanja! A software engineer passionate about building creative solutions and impactful applications.</p>
+    <p>Hi, I'm Vanja! A software engineer with a focus on building creative and innovative solutions to complex problems. I love coding, solving puzzles, and collaborating on exciting projects.</p>
   </section>
-  <section>
-    <h2>Projects</h2>
+  <section id="projects">
+    <h2>My Projects</h2>
+    <div class="project">
+      <h3><a href="https://github.com/vanjamontberg/project1">Project 1</a></h3>
+      <p>A brief description of your project goes here.</p>
+    </div>
+    <div class="project">
+      <h3><a href="https://github.com/vanjamontberg/project2">Project 2</a></h3>
+      <p>Another description for one of your awesome projects!</p>
+    </div>
+  </section>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Feel free to reach out via email or connect with me on LinkedIn!</p>
     <ul>
-      <li><a href="https://github.com/vanjamontberg/project1">Project 1</a> - A cool project description</li>
-      <li><a href="https://github.com/vanjamontberg/project2">Project 2</a> - Another great project</li>
+      <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+      <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
+      <li><a href="https://github.com/vanjamontberg">GitHub</a></li>
     </ul>
   </section>
   <footer>
