Add css changes

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="header-container">
-      <h1>Vanja Åsberg Montgomery</h1>
-      <p>A software engineer passionate about impactful technology solutions</p>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <div class="header-container">
+          <div class="header-logo">
+            <h1>Vanja Åsberg Montgomery</h1>
+          </div>
+          <nav class="header-nav">
+            <ul>
+              <li><a href="#resume">Resume</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <hr class="separator">
+      </header>
   <section id="about">
     <h2>About Me</h2>
     <p>Hi, I'm Vanja! A software engineer with a focus on building creative and innovative solutions to complex problems. I love coding, solving puzzles, and collaborating on exciting projects.</p>
@@ -39,8 +41,8 @@
     <h2>Contact Me</h2>
     <p>Feel free to reach out via email or connect with me on LinkedIn!</p>
     <ul>
-      <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-      <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
+      <li>Email: <a href="mailto:vaa14@georgetown.edu">vaa14@georgetown.edu</a></li>
+      <li><a href="https://linkedin.com/in/vanjamontberg">LinkedIn</a></li>
       <li><a href="https://github.com/vanjamontberg">GitHub</a></li>
     </ul>
   </section>
