Updated navigation styles and responsive layout for sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <nav class="header-nav">
             <ul>
-              <li><a href="#resume">Resume</a></li>
+              <li><a href="assets/resume.pdf" target="_blank">Resume</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -22,10 +22,19 @@
         </div>
         <hr class="separator">
       </header>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi, I'm Vanja! A software engineer with a focus on building creative and innovative solutions to complex problems. I love coding, solving puzzles, and collaborating on exciting projects.</p>
-  </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <div class="about-container">
+        <div class="about-text">
+          <p>
+            Hi, I'm Vanja! A software engineer with a focus on building creative and innovative solutions to complex problems. I love coding, solving puzzles, and collaborating on exciting projects.
+          </p>
+        </div>
+        <div class="about-photo">
+          <img src="profile.jpg" alt="Photo of Vanja">
+        </div>
+      </div>
+    </section>
   <section id="projects">
     <h2>My Projects</h2>
     <div class="project">
@@ -34,7 +43,19 @@
     </div>
     <div class="project">
       <h3><a href="https://github.com/vanjamontberg/project2">Project 2</a></h3>
-      <p>Another description for one of your awesome projects!</p>
+      <p>A brief description of your project goes here.</p>
+    </div>
+    <div class="project">
+        <h3><a href="https://github.com/vanjamontberg/project3">Project 3</a></h3>
+        <p>A brief description of your project goes here.</p>
+    </div>
+    <div class="project"></div>
+        <h3><a href="https://github.com/vanjamontberg/project4">Project 4</a></h3>
+        <p>A brief description of your project goes here.</p>
+    </div>
+    <div class="project"></div>
+        <h3><a href="https://github.com/vanjamontberg/project5">Project 5</a></h3>
+        <p>A brief description of your project goes here.</p>
     </div>
   </section>
   <section id="contact">
@@ -42,7 +63,7 @@
     <p>Feel free to reach out via email or connect with me on LinkedIn!</p>
     <ul>
       <li>Email: <a href="mailto:vaa14@georgetown.edu">vaa14@georgetown.edu</a></li>
-      <li><a href="https://linkedin.com/in/vanjamontberg">LinkedIn</a></li>
+      <li><a href="linkedin.com/in/vanja-åsberg-montgomery-675a81220">LinkedIn</a></li>
       <li><a href="https://github.com/vanjamontberg">GitHub</a></li>
     </ul>
   </section>
